@@ -1,5 +1,12 @@
 2008-05-31  Bruno Haible  <bruno@clisp.org>
 
+	* configure.in: Remove CL_PROG_CP invocation.
+	* m4/cp.m4: Remove file.
+	* m4/ln.m4 (CL_PROG_LN): Assume "cp -p" works on Unix.
+	* makemake.in (CP): Likewise.
+
+2008-05-31  Bruno Haible  <bruno@clisp.org>
+
 	* m4/closedir.m4 (CL_CLOSEDIR): Remove check for the prototype.
 	Don't define RETCLOSEDIRTYPE any more.
 
